force-app/main/default/objects/COE__c/fields/COH_BIDDERID__c.field-meta.xml
<CustomField>
    <fullName>COH_BIDDERID__c</fullName>
    <label>Bidder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>