force-app/main/default/objects/COE__c/fields/COH_BIDDERTYPE__c.field-meta.xml
<CustomField>
    <fullName>COH_BIDDERTYPE__c</fullName>
    <label>Bidder ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Foreign Identification Number</fullName>
            </value>
            <value>
                <fullName>Singapore NRIC</fullName>
            </value>
            <value>
                <fullName>UEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>