force-app/main/default/objects/COE__c/fields/COH_DEPOSIT__c.field-meta.xml
<CustomField>
    <fullName>COH_DEPOSIT__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>