force-app/main/default/objects/COE__c/fields/COH_DOCNO__c.field-meta.xml
<CustomField>
    <fullName>COH_DOCNO__c</fullName>
    <externalId>true</externalId>
    <label>COE Header Doc No</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>