force-app/main/default/objects/COE__c/fields/COH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>COH_STATUS__c</fullName>
    <formula>IF( AND(NOT(ISBLANK(Debit_No__c)),NOT(ISBLANK(Debit_Date__c))), &apos;Sold&apos;, IF( AND(ISBLANK(Sales_Agreement__c),ISBLANK(MB_Sales_Agreement__c)), &apos;Unused&apos;, &apos;Assigned&apos; ))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>