force-app/main/default/objects/COE__c/fields/COH_SUCCESSFROMDT__c.field-meta.xml
<CustomField>
    <fullName>COH_SUCCESSFROMDT__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>