force-app/main/default/objects/COE__c/fields/COH_SUCCESSTODT__c.field-meta.xml
<CustomField>
    <fullName>COH_SUCCESSTODT__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>