force-app/main/default/objects/COE__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(Text(Franchise__c) = &apos;MBCV&apos;, 21,IF( Text(Franchise__c) = &apos;MBP&apos;, 20, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>