force-app/main/default/objects/COE__c/fields/Customer_Full_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Full_NRIC__c</fullName>
    <formula>IF(Text(Franchise__c) = &apos;MBCV&apos;,NRICPSPT__c, MB_Sales_Agreement__r.CNRIC_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only For MB</inlineHelpText>
    <label>Customer Full NRIC</label>
    <type>Text</type>
</CustomField>