force-app/main/default/objects/COE__c/fields/MB_Sales_Agreement_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>MB_Sales_Agreement_Unique_Id__c</fullName>
    <label>MB Sales Agreement Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>