force-app/main/default/objects/COE__c/fields/NRICPSPT__c.field-meta.xml
<CustomField>
    <fullName>NRICPSPT__c</fullName>
    <label>NRICPSPT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>