force-app/main/default/objects/COE__c/fields/PQP__c.field-meta.xml
<CustomField>
    <fullName>PQP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PQP</label>
    <type>Checkbox</type>
</CustomField>