force-app/main/default/objects/COE__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>COEs</relationshipLabel>
    <relationshipName>COEs</relationshipName>
    <type>Lookup</type>
</CustomField>