force-app/main/default/objects/COE__c/fields/Sales_Agreement_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Unique_Id__c</fullName>
    <label>Sales Agreement Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>