force-app/main/default/objects/COE__c/fields/To_Sync__c.field-meta.xml
<CustomField>
    <fullName>To_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Sync</label>
    <type>Checkbox</type>
</CustomField>