force-app/main/default/objects/COE__c/validationRules/Franchise_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Franchise_Matching</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
(OR (ISCHANGED( Franchise__c ), ISCHANGED( Sales_Agreement__c  ), ISCHANGED(  MB_Sales_Agreement__c ))),
NOT(ISBLANK( Sales_Agreement__c  )),
NOT(CONTAINS( TEXT( Franchise__c ) , &quot;MB&quot;)),
(TEXT( Franchise__c )  &lt;&gt;  Sales_Agreement__r.FranchiseCode__c)
),
AND(
(OR (ISCHANGED( Franchise__c ), ISCHANGED( Sales_Agreement__c  ), ISCHANGED(  MB_Sales_Agreement__c ))),
NOT(CONTAINS( TEXT( Franchise__c ) , &quot;MB&quot;)),
NOT(ISBLANK( MB_Sales_Agreement__c  ))
),
AND(
(OR (ISCHANGED( Franchise__c ), ISCHANGED( Sales_Agreement__c  ), ISCHANGED(  MB_Sales_Agreement__c ))),
CONTAINS( TEXT( Franchise__c ) , &quot;MB&quot;),
NOT(ISBLANK( Sales_Agreement__c  ))
) 
)

&amp;&amp;  NOT($Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>COE Franchise must match with Sales Agreement Franchise.</errorMessage>
</ValidationRule>