force-app/main/default/objects/COE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COH_SOH_SONO__c</columns>
    <columns>COH_DOCNO__c</columns>
    <columns>COH_COENO__c</columns>
    <columns>COH_COECATEGORY__c</columns>
    <columns>COH_EXPMONTH__c</columns>
    <columns>COH_ADMINFEE__c</columns>
    <columns>COE_Bid_Period__c</columns>
    <columns>COE_Buy_Back__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PQP__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>